Update host name for zipkin and seq

--- a/.helm/seq.dev.yaml
+++ b/.helm/seq.dev.yaml
@@ -25,7 +25,7 @@ ui:
     enabled: true
     path: /
     hosts:
-      - seq.simplestore.com
+      - seq.simplestore.local
 
 ingestion:
   service:
